--- a/packages/libs/eda/src/lib/core/components/visualizations/Visualizations.scss
+++ b/packages/libs/eda/src/lib/core/components/visualizations/Visualizations.scss
@@ -194,6 +194,10 @@ $data-table-inner-border: 1px solid #888;
   th:first-of-type {
     border-bottom: 0;
   }
+
+  .numeric {
+    text-align: right;
+  }
 }
 
 .VariableCoverageTable {
