Center-align text of headers for numeric columns

--- a/packages/libs/eda/src/lib/core/components/visualizations/Visualizations.scss
+++ b/packages/libs/eda/src/lib/core/components/visualizations/Visualizations.scss
@@ -198,6 +198,10 @@ $data-table-inner-border: 1px solid #888;
   .numeric {
     text-align: right;
   }
+
+  .numeric-header {
+    text-align: center;
+  }
 }
 
 .VariableCoverageTable {
