Give variable selector more of a popover look and feel

--- a/packages/libs/eda/src/lib/core/components/variableTrees/VariableTree.scss
+++ b/packages/libs/eda/src/lib/core/components/variableTrees/VariableTree.scss
@@ -4,7 +4,7 @@
 
   .FeaturedVariables {
     padding: 0.5em 1em;
-    border: 1px solid #ccc;
+    border-bottom: 1px solid #ccc;
     summary {
       outline: none;
       cursor: pointer;
@@ -162,4 +162,9 @@
       border-bottom: 1px solid #ccc;
     }
   }
+}
+
+// variant
+.Variables .FeaturedVariables {
+  border: 1px solid #ccc;
 }
