Improve analysis heading button styles

--- a/packages/libs/eda/src/lib/workspace/EDAWorkspace.scss
+++ b/packages/libs/eda/src/lib/workspace/EDAWorkspace.scss
@@ -107,6 +107,10 @@
 
   &-AnalysisNameEditBox {
     font-style: italic;
+
+    i.wdk-Icon.edit {
+      color: #338899 !important;
+    }
   }
 
   &-SeeAllFiltersButton {
