--- a/packages/libs/web-common/src/App/Header/HeaderNav.scss
+++ b/packages/libs/web-common/src/App/Header/HeaderNav.scss
@@ -19,6 +19,7 @@ $red: #DD314E;
     right: 0;
     width: '160px';
     opacity: 0.75;
+    width: 9%;
   }
 
   &-Primary {
@@ -104,7 +105,7 @@ $red: #DD314E;
   flex-basis: auto;
   position: relative;
   z-index: 1;
-  justify-content: center;
+  justify-content: right;
   a.HeaderNav-Social-Link {
     &, &:link, &:active, &:visited { color: #fff; }
     opacity: 0.7;
