--- a/packages/libs/web-common/src/App/Header/HeaderNav.scss
+++ b/packages/libs/web-common/src/App/Header/HeaderNav.scss
@@ -23,7 +23,7 @@ $red: #DD314E;
   }
 
   &-Primary {
-    flex: 1;
+    flex: 2;
     justify-content: center;
     position: relative;
     z-index: 20;
@@ -101,6 +101,7 @@ $red: #DD314E;
 .HeaderNav-Social {
   flex: 1;
   width: auto;
+  margin-left: 4em;
   flex-wrap: nowrap;
   flex-basis: auto;
   position: relative;
