--- a/packages/libs/eda/src/lib/core/components/variableTrees/VariableTree.scss
+++ b/packages/libs/eda/src/lib/core/components/variableTrees/VariableTree.scss
@@ -1,4 +1,5 @@
 .EDAWorkspace-VariableList {
+  height: 100%;
   display: flex;
   flex-flow: column;
 
@@ -65,7 +66,6 @@
   }
 
   .wdk-CheckboxTree {
-    height: 60vh;
     display: flex;
     flex-flow: column;
   }
