Add overflow:auto to CheckBoxTree container

--- a/packages/libs/eda/src/lib/core/components/variableTrees/VariableTree.scss
+++ b/packages/libs/eda/src/lib/core/components/variableTrees/VariableTree.scss
@@ -68,6 +68,7 @@
   .wdk-CheckboxTree {
     display: flex;
     flex-flow: column;
+    overflow: auto;
   }
 
   /* configuring scrolling for CheckboxTree list only: anchoring search bar */
