--- a/packages/libs/eda/src/index.css
+++ b/packages/libs/eda/src/index.css
@@ -11,4 +11,41 @@ h5,
 h6 {
   font-family: 'Roboto', 'Helvetica Neue', Helvetica, 'Segoe UI', Arial,
     freesans, sans-serif;
+  margin: 0;
+  color: #222;
+}
+
+h1 {
+  text-align: left;
+  font-size: 2.8em;
+  font-weight: 400;
+  padding: 22px 0;
+}
+h2 {
+  font-size: 1.8em;
+  font-weight: 500;
+  padding: 12px 0 8px 0;
+}
+h3 {
+  font-size: 1.5em;
+  font-weight: 500;
+  padding: 22px 0 8px 0;
+}
+h4 {
+  font-size: 1.2em;
+  font-weight: 500;
+  padding: 10px 0 8px 0;
+}
+
+a,
+.link,
+.wdk-Link {
+  color: #069;
+}
+
+.link {
+  border: none;
+  background: transparent;
+  padding: none;
+  margin: none;
 }
