--- a/packages/libs/web-common/src/App/Header/HeaderNav.scss
+++ b/packages/libs/web-common/src/App/Header/HeaderNav.scss
@@ -60,7 +60,7 @@ $red: #DD314E;
   }
 
   &-Branding {
-    padding: 5px 5px 20px;
+    padding: 0 5px;
     min-width: 360px;
     flex: 0;
     flex-wrap: nowrap;
