add optional subtitle to OutputEntityTitle

--- a/packages/libs/eda/src/lib/core/components/visualizations/Visualizations.scss
+++ b/packages/libs/eda/src/lib/core/components/visualizations/Visualizations.scss
@@ -282,6 +282,12 @@ $data-table-inner-border: 1px solid #888;
   }
 }
 
+.OutputEntitySubtitle {
+  font-style: italic;
+  font-size: 0.9em;
+  margin-top: -10px;
+}
+
 // R-square table for Scatter plot's Best fit option
 .ScatterRsquareTable {
   @include data-table;
