Update header layouts

--- a/packages/libs/web-common/src/App/Header/Header.scss
+++ b/packages/libs/web-common/src/App/Header/Header.scss
@@ -67,7 +67,11 @@
     color: white;
     text-align: center;
     margin: 0;
-    font-size: 22px;
+    font-size: 20px;
+  }
+
+  .SiteSearch--SearchBox input {
+    background: #e6e6e6;
   }
 }
 
