--- a/packages/libs/web-common/src/App/UserMenu/UserMenu.scss
+++ b/packages/libs/web-common/src/App/UserMenu/UserMenu.scss
@@ -8,7 +8,8 @@ $white: #E0E0E0;
   display: flex;
   position: relative;
   flex-direction: column;
-  padding-left: 50px;
+  padding-left: 2em;
+  margin: -.75em 0;
 
   .UserMenu-Icon {
     font-size: 30px;
