Fix checkbox tree arrows

--- a/packages/libs/eda/src/lib/core/components/variableTrees/VariableTree.scss
+++ b/packages/libs/eda/src/lib/core/components/variableTrees/VariableTree.scss
@@ -79,7 +79,7 @@
     flex-grow: 2;
   }
 
-  .wdk-CheckboxTreeNodeContent {
+  .wdk-CheckboxTreeList__not-selectable .wdk-CheckboxTreeNodeContent {
     margin-left: 1ex;
   }
 
