--- a/packages/libs/eda/src/lib/workspace/EDAWorkspace.scss
+++ b/packages/libs/eda/src/lib/workspace/EDAWorkspace.scss
@@ -201,7 +201,8 @@
     padding-top: 1em;
     .Variables {
       grid-area: variables;
-      max-height: 70vh;
+      max-height: 100vh;
+      overflow: visible;
     }
     .FilterChips {
       height: 2em;
