Adjust CheckboxTreeList max-height and overflow

--- a/packages/libs/wdk-client/src/Views/Records/Record.css
+++ b/packages/libs/wdk-client/src/Views/Records/Record.css
@@ -121,8 +121,8 @@
 }
 
 .wdk-RecordNavigationSection .wdk-CheckboxTree > .wdk-CheckboxTreeList {
-  max-height: calc(100vh - 175px);
-  overflow-y: auto;
+  max-height: 70vh;
+  overflow-y: scroll;
   position: relative;
 }
 
