--- a/packages/libs/eda/src/lib/workspace/Subsetting/SubsetDownloadModal.scss
+++ b/packages/libs/eda/src/lib/workspace/Subsetting/SubsetDownloadModal.scss
@@ -1,15 +1,10 @@
 .SubsetDownloadModal {
-  .modal-content {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-  }
-
   .EDAWorkspace-VariableList {
     height: auto;
     display: block;
   }
 
+  // see if these can be added to the style spec for the data grid
   .DataGrid-Wrapper > :nth-child(1) {
     height: 100%;
     display: flex;
