Tweak email note and spacing in ContactUs

--- a/packages/libs/web-common/src/components/ContactUs/ContactUsAttachments.scss
+++ b/packages/libs/web-common/src/components/ContactUs/ContactUsAttachments.scss
@@ -13,7 +13,7 @@
   }
 
   .add-file button.btn, .add-another-file button.btn {
-    margin-bottom: 1em;
+    margin-bottom: 0;
     margin-left: 0.5em;
   }
 
