SaveableTextEditor: don't constrain the width of the "edit" icon

--- a/packages/libs/wdk-client/src/Components/InputControls/wdk-SaveableTextEditor.scss
+++ b/packages/libs/wdk-client/src/Components/InputControls/wdk-SaveableTextEditor.scss
@@ -70,7 +70,10 @@
       &.edit {
         background-color: transparent;
         color: $blue;
-        font-size: .8em
+        font-size: .8em;
+        line-height: inherit;
+        width: fit-content;
+        height: fit-content;
       }
       &.cancel { background-color: $red; font-size: 12px; }
       &.save { background-color: $green; font-size: 12px; }
