Fix dimension error in Genetic variation plot and revert record nav scrollbar

--- a/packages/libs/wdk-client/src/Views/Records/Record.css
+++ b/packages/libs/wdk-client/src/Views/Records/Record.css
@@ -122,7 +122,7 @@
 
 .wdk-RecordNavigationSection .wdk-CheckboxTree > .wdk-CheckboxTreeList {
   max-height: 70vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   position: relative;
 }
 
