added initial unfiltered marker render (with flyTo), tooltip and styling

--- a/packages/libs/eda/src/lib/workspace/EDAWorkspace.scss
+++ b/packages/libs/eda/src/lib/workspace/EDAWorkspace.scss
@@ -166,6 +166,10 @@
   .expanded-diagram {
   }
 
+  .MinimapContainer {
+    box-shadow: 2px 2px 7px #00000050;
+  }
+
   &-Variables {
     h3 {
       padding: 0;
