Move input variable clear selection button out of popover

--- a/packages/libs/eda/src/lib/core/components/variableTrees/VariableTree.scss
+++ b/packages/libs/eda/src/lib/core/components/variableTrees/VariableTree.scss
@@ -143,6 +143,8 @@
 
 .EDAWorkspace-VariableTreeDropdown {
   position: relative;
+  display: flex;
+  align-items: center;
 
   &TreeContainer {
     // border: 1px solid;
