Add styleOverrides for new CheckboxTree in ResultsTableAddColumnsDialog

--- a/packages/libs/wdk-client/src/Views/ResultTableSummaryView/ResultTableSummaryView.scss
+++ b/packages/libs/wdk-client/src/Views/ResultTableSummaryView/ResultTableSummaryView.scss
@@ -129,6 +129,7 @@
 .AddColumnsDialogContent {
   flex-direction: column;
   justify-content: space-between;
+  padding: 0;
 
   .btn.ResultTable-AddColumnsButton {
     margin: 1em auto;
