--- a/packages/libs/eda/src/lib/core/components/visualizations/Visualizations.scss
+++ b/packages/libs/eda/src/lib/core/components/visualizations/Visualizations.scss
@@ -238,6 +238,10 @@ $data-table-thick-border: 2px solid #262626;
     padding-right: 10px;
   }
 
+  td {
+    line-height: 1.4em;
+  }
+
   .contingency-table_column-label {
     border-bottom: $data-table-thick-border !important;
   }
